# chain-sleuth

./: .env  .gitignore  README.md  bitte.dev.json  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
contract/: Cargo.toml
contract/res/: chainsleuth.wasm  contract.wasm
contract/scripts/: build.sh  deploy-mainnet.sh  deploy-testnet.sh  deploy.sh  test.sh
contract/src/: enumeration.rs  events.rs  investigation.rs  lib.rs  metadata.rs  test.rs  webhook_mappings.rs
contract/src/tests/: mod.rs
near-contract/: package-lock.json  package.json
near-contract/src/: contract.js  contract.ts  metadata.json  package.json  tsconfig.json
public/.well-known/: ai-plugin.json
src/api/: index.ts
src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx  providers.tsx
src/components/: ErrorBoundary.tsx  PageLayout.tsx  QueryComponent.tsx  WalletConnector.tsx  WalletSelector.tsx  layout.tsx
src/constants/: contract.ts
src/context/: WalletSelectorContext.tsx
src/hooks/: useWebSocket.ts
src/providers/: QueryProvider.tsx
src/services/: edgePipelineService.ts  investigationWorkflow  investigationWorkflow.ts  pieplineService.ts  pipelineQueueService.ts  pipelineService.ts  testInvestigationWorkflow.ts  webSocketService.ts  webhookQueueService.ts
src/test/: connection.ts
src/types/: custom.d.ts  enviornment.d.ts  graph.ts  index.ts  investigation.ts  nft.ts  pipeline.ts  webhook.ts  websocket.ts
src/utils/: auth.ts  logger.ts  neo4j-test-client.ts  neo4j.ts  redis.ts
src/workers/: pipelineWorker.ts  (+1 more)
(+47 files in other folders)
