[package]
name = "contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = { version = "5.5.0", features = ["legacy"] }
near-contract-standards = "5.5.0"
near-sdk-macros = "5.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
borsh = "1.5.1"

[features]
default = ["std"]
std = []
