[package]
name = "chainsleuth"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = { version = "5.5.0", features = ["legacy"] }
near-contract-standards = "5.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
borsh = "1.5.1"


[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[features]
default = ["std"]
std = []